# inventory

./: IMPLEMENTATION.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DashboardHeader.tsx  ErrorMessage.tsx  HistoryModal.tsx  LoadingScreen.tsx  Navbar.tsx  ProductModal.tsx  StatCard.tsx  StatsGrid.tsx  StockTable.test.jsx  StockTable.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useInventoryActions.ts  useProducts.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
frontend/src/routes/: PrivateRoute.tsx
frontend/src/services/: api.ts
frontend/src/types/: inventory.ts
gateway/: nginx.conf
services/: Dockerfile  requirements.txt
services/identity/: pyproject.toml
services/identity/accounts/: models.py  serializers.py  urls.py  views.py
services/identity/accounts/migrations/: 0001_initial.py
services/identity/core/: settings.py  urls.py
services/inventory/: products_data.csv
services/inventory/core/: celery.py  settings.py  urls.py
services/inventory/products/: apps.py  authentication.py  models.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  viewsets.py
services/inventory/products/management/commands/: import_inventory.py
services/inventory/products/migrations/: 0001_initial.py  0002_stocktransaction.py
